<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinesscardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="20dp"
            android:id="@+id/businessCard">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_bk3">

                <TextView
                    android:id="@+id/firstnameC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="First Name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/lastnameC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_toRightOf="@+id/firstnameC"
                    android:text="Last name"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/firstnameC"
                    android:layout_marginStart="200dp"
                    android:text="@string/company_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/companyAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="79dp"
                    android:layout_toEndOf="@+id/imageView3"
                    android:text="@string/company_address"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/companyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="54dp"
                    android:layout_toEndOf="@+id/imageView4"
                    android:text="Phone Number"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/emailC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="28dp"
                    android:layout_toEndOf="@+id/imageView2"
                    android:text="Emal Address"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="114dp"
                    android:layout_marginBottom="28dp"
                    android:src="@drawable/ic_email"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="167dp"
                    android:layout_marginBottom="79dp"
                    android:src="@drawable/ic_location"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="140dp"
                    android:layout_marginBottom="54dp"
                    android:src="@drawable/ic_phone"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/btn_print"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="81dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="202dp"
                android:text="Print" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-169dp"
                android:layout_marginEnd="283dp"
                android:layout_toEndOf="@+id/btn_print"
                android:text="Edit" />
        </RelativeLayout>


    </LinearLayout>




</ScrollView>